- AVSpeech was added. - Minor UI fixes.
Known bugs:
- CamView still stuck at white background.
- Everything else works fine.

--- a/SayIt/Base.lproj/Main.storyboard
+++ b/SayIt/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="SFB-71-rF5">
                                         <rect key="frame" x="8" y="8" width="319" height="44"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="1" translatesAutoresizingMaskIntoConstraints="NO" id="JhN-Vv-qYP">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="JhN-Vv-qYP">
                                                 <rect key="frame" x="0.0" y="0.0" width="319" height="32"/>
                                                 <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="18"/>
                                                 <color key="textColor" red="0.62625688314437866" green="0.20073515176773071" blue="0.14302018284797668" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
